<resources>
    <string name="app_name">CountriesApp</string>

    <string name="error_toque">Ocurrió un error\nToque la pantalla para reintentar</string>

    <string name="no_results">No hay resultados para el texto ingresado</string>

    <string name="back">Countries</string>
    <string name="search">Search</string>
    <string name="country">{Country}</string>
    <string name="countries">Countries</string>
    <string name="argentina">Argentina</string>
    <string name="capital">Capital -</string>
    <string name="region">Region -</string>
    <string name="subregion">Subregion -</string>
    <string name="languajes">Languajes -</string>
    <string name="currencies">Currencies -</string>
    <string name="population">Population -</string>
    <string name="car_driver_side">Car Driver Side -</string>
    <string name="coat_of_arms">Coat of Arms</string>
    <string name="flag">flag</string>

</resources>